--- a/style.css
+++ b/style.css
@@ -109,7 +109,7 @@
             padding: 10px;
             max-width: 70%;
             margin: 10px 0;
-            background: linear-gradient(15deg, #13547a 0%, #80d0c7 100%);
+            background:blue;
             color: #fff;
             border-radius: 10px;
             word-wrap: break-word;
